--- a/src/main/resources/static/settings/settings.css
+++ b/src/main/resources/static/settings/settings.css
@@ -117,7 +117,7 @@ header > div {
 
 #settings .setting-category .setting-description {
     display: none;
-    font-size: 1vmax;
+    font-size: 1.25vmax;
     opacity: 0.65;
     text-align: justify;
     text-align-last: center;
